# ekf3d

./: .gitignore  AGENTS.md  README.md  pyproject.toml
scripts/: benchmark_accuracy.py  benchmark_realtime.py  integration_example.py
src/ekf3d/: __init__.py  ekf_predictor.py  ekf_updater.py
tests/: conftest.py  test_ekf_predictor.py  test_ekf_updater.py  test_input_validation.py  test_integration_example_script.py  test_measurement_model.py  test_motion_model.py  test_regression_targets.py  test_updater_additional.py
tests/perf/: test_microbench.py
