[project]
name = "ekf3d"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Christopher Serrano", email = "cserrano@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.1",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
